<resources>
    <string name="app_name">SulpassoMobile</string>
    <string name="title_activity_login">Login</string>
    <string name="empty"></string>
    <string name="action_settings">Settings</string>
    <string name="justificativa">Deseja justificar a não venda a este cliente? Ao justificar o pedido será encerrado.</string>
    <string name="prompt_email">USUÁRIO</string>
    <string name="prompt_password">SENHA</string>
    <string name="action_sign_in">ACESSAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="generic_confirmar">Confirmar</string>
    <string name="generic_cancelar">Cancelar</string>
    <string name="lbl_qtd">Quantidade: </string>
    <string name="lbl_desh">-</string>
    <string name="lbl_seq">1234567890</string>
    <string name="lbl_qtd_caixa">Qtd. Caixa: </string>
    <string name="lbl_qtd_vda">Qtd. Venda: </string>
    <string name="lbl_un">UN.: </string>
    <string name="lbl_uv">UN. V.: </string>
    <string name="lbl_estoque">Estoque: </string>
    <string name="lbl_barras">C. Barras: </string>
    <string name="versao">Versão 1.0</string>
    <string name="str_pedido">Digitação de Pedidos</string>
    <string name="str_consulta">Consultas/Relatórios</string>
    <string name="str_enviar">Envio de Pedidos</string>
    <string name="str_atualizar">Atualizar Sistema</string>
    <string name="str_agenda">Agenda de Visita</string>
    <string name="str_cadastro">Cadastro Cliente</string>
    <string name="str_pesq_merc">Pesquisa de Mercado</string>
    <string name="str_sair">Sair do \n Sistema</string>
    <string name="apresentacao_1">Desenvolvido por: </string>
    <string name="apresentacao_2"> Sulpasso Informática</string>
    <string name="contato_fone">Fone: (54) 3311\-1081</string>
    <string name="contato_email">gestao@sulpasso.com.br</string>
    <string name="validade_data">Validade: 20/04/2013</string>
    <string name="str_minimo">Minimo</string>
    <string name="str_promocao">Promoções</string>
    <string name="str_tabela">Valor Tabela</string>
    <string name="str_confirmar">Confirmar Item</string>
    <string name="str_solicitar_senha">SENHA</string>
    <string name="str_desc_item">Desc. Item: </string>
    <string name="str_val_cli">Val. Especial: </string>
    <string name="str_unitario">Valor Unitário: </string>
    <string name="lbl_val">Valor: </string>
    <string name="lbl_desc">Desconto(%): </string>
    <string name="lbl_acre">Acréscimo(%): </string>
    <string name="lbl_total">Total R($): </string>
    <string name="lbl_mrk">Markup %: </string>
    <string name="lbl_ppc">PPC: </string>
    <string name="lbl_cont">CONT.: </string>
    <string name="str_prazo">Prazo: %1$s</string>
    <string name="str_tab">Tabela: %1$s</string>
    <string name="str_flex">DCA: %1$s</string>
    <string name="str_qtd">Quantidade: %1$s</string>
    <string name="str_media">Média: %1$s</string>
    <string name="lbl_estado">UF: </string>
    <string name="lbl_end">Endereço: </string>
    <string name="lbl_fone">Telefone: </string>
    <string name="lbl_cel">Celular: </string>
    <string name="lbl_ultima">Ult Comp: </string>
    <string name="lbl_meta">Meta: </string>
    <string name="lbl_realizado">Realizado: </string>
    <string name="lbl_credito">Crédito: </string>
    <string name="lbl_cidade">Cidade: </string>
    <string name="tlt_titulo_detalhes">DADOS ADICIONAIS CLIENTES</string>
    <string name="str_fantasia">Nome fatasia: </string>
    <string name="str_bairro">Bairro: </string>
    <string name="str_cnpj">CNPJ: </string>
    <string name="str_cod">Código: </string>
    <string name="str_ie">I.E.: </string>
    <string name="str_banco">Banco: </string>
    <string name="str_cep">CEP: </string>
    <string name="str_aniversario">Aniversário: </string>
    <string name="str_roteiro">Roteiro: </string>
    <string name="str_mail">Email: </string>
    <string name="str_contato">Contato: </string>
    <string name="str_visita">Dia Visita: </string>
    <string name="str_seg">Segunda: </string>
    <string name="str_ter">Terça: </string>
    <string name="str_qua">Quarta: </string>
    <string name="str_qui">Quinta: </string>
    <string name="str_sex">Sexta: </string>
    <string name="str_sab">Sábado: </string>
    <string name="str_msg">Mensage: </string>
    <string name="str_busca">Digite o item de busca </string>
    <string name="btn_serach">Pesq.: </string>
    <string name="hnt_descIni">Inicio Descrição: </string>
    <string name="hnt_descAny">Descrição: </string>
    <string name="hnt_ref">Referência: </string>
    <string name="hnt_grp">Grupo: </string>
    <string name="hnt_sgrp">Sub Grupo: </string>
    <string name="hnt_div">Divisão: </string>
    <string name="str_itens">Qtd.: </string>
    <string name="str_valor">Val.: </string>
    <string name="str_contribuicao">Con.: </string>
    <string name="str_volume">Vol.: </string>
    <string name="lbl_total_itens">Total dos Itens: </string>
    <string name="lbl_valor_total">Total da Venda: </string>
    <string name="lbl_desconto">Desconto: </string>
    <string name="lbl_acrescimo">Frete: </string>
    <string name="lbl_cli">Cliente: </string>
    <string name="lbl_natureza">NATUREZA </string>
    <string name="lbl_prazo">PRAZO </string>
    <string name="lbl_tabela">TABELA </string>
    <string name="hnt_obs_pedido">Informações para o CPD</string>
    <string name="hnt_obs_nota">Observação impressa na NFE</string>
    <string name="hnt_obs_desconto">Justificativa para desconto no pedido</string>
    <string name="hnt_zero">0,00</string>
    <string name="str_excluir">EXCLUÍR ITEM</string>
    <string name="str_alterar">ALTERAR ITEM</string>
    <string name="tlt_alterar_excluir">ALTERAR OU EXCLUÍR O ITEM</string>
    <string name="tlt_alterar_excluir_p">ALTERAR OU EXCLUÍR O PEDIDO</string>
    <string name="tlt_senha_pedidos">SENHA DE LIBERAÇÃO</string>
    <string name="tlt_datas_pedidos">ESCOLHA A DATA DOS PEDIDOS</string>
    <string name="tlt_datas_promos">PROMOÇÕES ENCONTRADAS PARA O ITEM</string>
    <string name="tlt_busca_grupo">Busca Por Grupos</string>
    <string name="msg_busca_grupo">Selecione o grupo, sub grupo e divisão para a consulta</string>
    <string name="str_grupo_zero">Escolha o grupo</string>
    <string name="str_sub_zero">Escolha o subgrupo</string>
    <string name="str_div_zero">Escolha a divisão</string>
    <string name="tlt_detalhes">DETALHES DO ITEM</string>
    <string name="lbl_comp">Complemento</string>
    <string name="lbl_ref">Referência</string>
    <string name="tlt_pre_pedido">PRE PEDIDO</string>
    <string name="tlt_corte">CONSULTA CORTE</string>
    <string name="tlt_devoucao">CONSULTA DEVOLUÇÃO</string>
    <string name="tlt_titulos">CONSULTA TITULOS ABERTOS</string>
    <string name="positivados">POSITIVADOS</string>
    <string name="mes">MÊS</string>
    <string name="semana">SEMANA</string>
    <string name="n_positivados">NÃO POSITIVADOS</string>
    <string name="meta">META</string>
    <string name="real">REALIZADO</string>
    <string name="percent">%</string>
    <string name="peso">PESO</string>
    <string name="cli">CLIENTE</string>
    <string name="fat">FATURAMENTO</string>
    <string name="contri">CONTRIBUIÇÃO</string>
    <string name="familia">FAMILIA</string>
    <string name="vda">VENDA</string>
    <string name="comis">COMISSÃO</string>
    <string name="telaPedido">PEDIDO</string>
    <string-array name="fragTitles">
        <item><b>#</b>INICIO</item>
        <item><b>#</b>LISTA ITENS</item>
        <item><b>#</b>DIGITAÇÃO ITEM</item>
        <item><b>#</b>FINALIZAÇÃO</item>
        <item><b>#</b>RESUMO ITENS DO PEDIDO</item>
        <item><b>#</b>DADOS ADCIONAIS CLIENTE</item>
    </string-array>
    <string name="telasConsulta">CONSULTA</string>
    <string-array name="fragTitlesConsultaItens">
        <item><b>#</b>ITENS</item>
        <item><b>#</b>PROMOÇÕES</item>
        <item><b>#</b>GRAVOSOS</item>
        <item><b>#</b>KITS</item>
        <item><b>#</b>PREÇO MINIMO</item>
        <item><b>#</b>CAMPANHA PRODUTOS</item>
        <item><b>#</b>CAMPANHA GRUPOS</item>
        <item><b>#</b>DETLHES ITENS</item>
        <item><b>#</b>PRODUTOS FOCO</item>
    </string-array>
    <string-array name="fragTitlesConsultaClientes">
        <item><b>#</b>POSITIVAÇÃO</item>
        <item><b>#</b>CURVA ABC</item>
        <item><b>#</b>CONTAS RECEBER</item>
        <item><b>#</b>DEVOLUÇÕES</item>
        <item><b>#</b>CORTES</item>
        <item><b>#</b>PRE PEDIDOS</item>
        <item><b>#</b>ANIVERSÁRIOS</item>
    </string-array>
    <string-array name="fragTitlesConsultaPedidos">
        <item><b>#</b>PEDIDOS</item>
        <item><b>#</b>VENDAS DIRETA</item>
        <item><b>#</b>RESUMO DIA</item>
    </string-array>
    <string-array name="fragTitlesConsultaGerencial">
        <item><b>#</b>MENSAGENS</item>
        <item><b>#</b>METAS</item>
        <item><b>#</b>GRÁFICOS</item>
        <item><b>#</b>PLANO DE VISITAS</item>
    </string-array>
    <string name="tab"> </string>
    <string name="menu_clientes">CLIENTES</string>
    <string name="menu_clientes_a">Agenda</string>
    <string name="menu_clientes_v">Visita</string>
    <string name="menu_clientes_t">Todos</string>
    <string name="menu_clientes_c">Cidade</string>
    <string name="menu_clientes_r">Razão Social</string>
    <string name="menu_clientes_f">Nome Fantasia</string>
    <string name="menu_itens">ITENS</string>
    <string name="menu_itens_descI">Descrição (Inicio)</string>
    <string name="menu_itens_r">Referencia</string>
    <string name="menu_itens_g">Grupo</string>
    <string name="menu_itens_s">Sub Grupo</string>
    <string name="menu_itens_d">Divisão</string>
    <string name="menu_itens_p">Pre Pedido</string>
    <string name="menu_itens_gr">Gravosos</string>
    <string name="menu_itens_m">Mix Ideal</string>
    <string name="menu_itens_desc">Descrição</string>
    <string name="menu_inicial_p">PEDIDO</string>
    <string name="menu_inicial_ca">CADASTRO</string>
    <string name="menu_inicial_ag">AGENDA</string>
    <string name="menu_inicial_at">ATUALIZAÇÃO</string>
    <string name="menu_inicial_s">SAIR</string>
    <string name="menu_inicial_co">CONSULTAS</string>
    <string name="menu_consulta_todos">Todos</string>
    <string name="menu_consulta_enviados">Enviados</string>
    <string name="menu_consulta_copia">Cópia Pedidos</string>
    <string name="menu_consulta_reenvio">Reenvio Pedidos</string>
    <string name="menu_consulta_nao">Não Enviados</string>
    <string name="menu_consulta_direta">Vendas Diretas</string>
    <string name="menu_consulta_resumo">Resumo Dia</string>
    <string name="menu_consulta_precos">Produtos</string>
    <string name="menu_consulta_minimo">Preços Minimos</string>
    <string name="menu_consulta_gravoso">Gravosos</string>
    <string name="menu_consulta_foco">Produtos Foco</string>
    <string name="menu_consulta_kit">Kits</string>
    <string name="menu_consulta_promo">Promoções</string>
    <string name="menu_consulta_campP">Campanhas Produtos</string>
    <string name="menu_consulta_campG">Campanhas Grupos</string>
    <string name="menu_consulta_titulos">Títulos Abertos</string>
    <string name="menu_consulta_devolucao">Devoluções</string>
    <string name="menu_consulta_corte">Cortes</string>
    <string name="menu_consulta_positivacao">Positivação</string>
    <string name="msg_mix">ALGUNS ITENS DO MIX IDEAL DO CLIENTE NÃO ESTÃO PRESENTES NO PEDIDO</string>
</resources>