<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/consulta_itens_precos"
        android:showAsAction="always"
        android:title="@string/menu_consulta_precos">
    </item>
    <item
        android:id="@+id/consulta_itens_foco"
        android:showAsAction="always"
        android:title="@string/menu_consulta_foco">
    </item>
    <item
        android:id="@+id/consulta_itens_kit"
        android:showAsAction="always"
        android:title="@string/menu_consulta_kit">
    </item>
    <item
        android:id="@+id/consulta_itens_promocao"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_promo">
    </item>
    <item
        android:id="@+id/consulta_itens_campanha"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_campP">
    </item>
    <item
        android:id="@+id/consulta_itens_grupos"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_campG">
    </item>
    <item
        android:id="@+id/consulta_itens_minimo"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_minimo">
    </item>
    <item
        android:id="@+id/consulta_itens_gravosos"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_gravoso">
    </item>
</menu>