<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/consulta_pedidos_todos"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_todos">
    </item>
    <item
        android:id="@+id/consulta_pedidos_resumo"
        android:showAsAction="never"
        android:title="@string/menu_consulta_resumo">
    </item>
    <item
        android:id="@+id/consulta_pedidos_nao"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_nao">
    </item>
    <item
        android:id="@+id/consulta_pedidos_direta"
        android:showAsAction="never"
        android:title="@string/menu_consulta_direta">
    </item>
    <item
        android:id="@+id/consulta_pedidos_enviados"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_enviados">
    </item>

    <item
        android:id="@+id/consulta_pedidos_reenviar"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_reenvio">
    </item>
    <item
        android:id="@+id/consulta_pedidos_copia"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_copia">
    </item>
</menu>