<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/consulta_clientes_positivacao"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_positivacao">
    </item>
    <item
        android:id="@+id/consulta_clientes_titulos"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_titulos">
    </item>
    <item
        android:id="@+id/consulta_clientes_devolucao"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_devolucao">
    </item>
    <item
        android:id="@+id/consulta_clientes_corte"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_corte">
    </item>
    <!--

    <item
        android:id="@+id/consulta_clientes_abc"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_abc">
    </item>
    <item
        android:id="@+id/consulta_clientes_pre"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_pre">
    </item>
    <item
        android:id="@+id/consulta_clientes_aniversario"
        android:showAsAction="ifRoom"
        android:title="@string/menu_consulta_aniversario">
    </item>
    -->
</menu>