<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/asifEdtSearch"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/padding_superior"
        android:hint="@string/hnt_descAny"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <Spinner
        android:layout_width="wrap_content"
        android:id="@+id/asifSpnrFiltered"
        android:layout_height="0dp"
        android:paddingTop="@dimen/padding_superior"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_superior"
        android:text="@string/empty"
        android:background="@color/cinza"/>

    <ListView
        android:layout_width="wrap_content"
        android:id="@+id/asifLvAdd"
        android:layout_height="0dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_weight="0.6" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/padding_superior"
        android:paddingBottom="@dimen/padding_inferior"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/generic_confirmar"
            android:id="@+id/asifBtnConf"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>