<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/msg_mix"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:paddingBottom="@dimen/padding_inferior"
        android:layout_marginBottom="@dimen/padding_inferior"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:id="@+id/amfLvItens"
        android:layout_marginTop="@dimen/padding_superior"
        android:paddingTop="@dimen/padding_superior"
        android:paddingBottom="@dimen/padding_inferior"
        android:layout_marginBottom="@dimen/padding_inferior" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginTop="@dimen/padding_superior">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/generic_confirmar"
            android:id="@+id/amfBtnConfirmar"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/generic_cancelar"
            android:id="@+id/amfBtnAlterar"
            android:layout_weight="0.5" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/generic_confirmar"
        android:id="@+id/amfBtnSair"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />
</LinearLayout>