<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="750dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Finalizar Pedido"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:onClick="selecionarItem" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/flirEdtCliente" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/flirEdtCidade" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:inputType="number"
                    android:id="@+id/flirEdtNaturesa"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:inputType="number"
                    android:id="@+id/flirEdtTabela"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/flirEdtTipo"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:background="#a10505" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:id="@+id/flirLiItens"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin"
                android:background="#a10505" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1">

                <EditText
                    android:layout_width="0dp"
                    android:enabled="false"
                    android:clickable="false"
                    android:layout_weight="0.25"
                    android:hint="@string/str_itens"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/fliEdtItens"
                    android:gravity="center_vertical|center_horizontal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:enabled="false"
                    android:clickable="false"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/str_valor"
                    android:id="@+id/fliEdtValor"
                    android:gravity="center_vertical|center_horizontal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:enabled="false"
                    android:clickable="false"
                    android:hint="@string/str_volume"
                    android:id="@+id/fliEdtVolume"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:enabled="false"
                    android:hint="@string/str_contribuicao"
                    android:clickable="false"
                    android:id="@+id/fliEdtCont"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>